--- a/src/api/local.settings.json
+++ b/src/api/local.settings.json
@@ -2,7 +2,7 @@
   "IsEncrypted": false,
   "Values": {
     "AzureWebJobsStorage": "UseDevelopmentStorage=true",
-    "FUNCTIONS_WORKER_RUNTIME": "dotnet",
+    "FUNCTIONS_WORKER_RUNTIME": "dotnet-isolated",
 
     "APPINSIGHTS_INSTRUMENTATIONKEY": "1ef798fd-96b6-4e8b-a8c0-ea41a23d05b8",
     "CosmosTableConnectionString": "<secret>",
