--- a/.github/workflows/build-test-deploy.yml
+++ b/.github/workflows/build-test-deploy.yml
@@ -1,4 +1,4 @@
-﻿name: Build - Reusable
+﻿name: Build, Test and Deploy
 
 on:
   workflow_call:
@@ -12,7 +12,7 @@ env:
   
 jobs:
   build_test_and_deploy:
-    name: Azure Static Web Apps - Build/Test/Deploy
+    name: Build, Test and Deploy
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -54,7 +54,7 @@ jobs:
         run: yarn run production
         working-directory: ${{ env.WORKING_DIR }}/${{ env.CLIENT_DIR }}
 
-      - name: Deploy
+      - name: Azure Static Web Apps - Deploy
         uses: Azure/static-web-apps-deploy@v1
         with:
           azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
