--- a/.github/workflows/cleanup.yml
+++ b/.github/workflows/cleanup.yml
@@ -1,14 +1,14 @@
-﻿name: Close PR - Reusable
+﻿name: Cleanup
 
 on:
   workflow_call:
         
 jobs:
-  close_pull_request:
-    name: Azure Static Web Apps - Close
+  cleanup:
+    name: Cleanup
     runs-on: ubuntu-latest
     steps:
-      - id: closepullrequest
+      - name: Azure Static Web Apps - Close
         uses: Azure/static-web-apps-deploy@v1
         with:
           azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
