--- a/src/.editorconfig
+++ b/src/.editorconfig
@@ -8,9 +8,6 @@ indent_style = space
 indent_size = 4
 trim_trailing_whitespace = true
 
-[*.cs]
-csharp_style_namespace_declarations = file_scoped:suggestion
-
 [*.{js,cjs,mjs}]
 indent_size = 2
 
@@ -28,3 +25,21 @@ indent_size = 2
 
 [dependabot.yml]
 charset = utf-8
+
+[*.cs]
+csharp_style_namespace_declarations = file_scoped:suggestion
+
+# CA1305: Specify IFormatProvider
+dotnet_diagnostic.CA1305.severity = none
+
+# CA1805: Do not initialize unnecessarily
+dotnet_diagnostic.CA1805.severity = none
+
+# CA1848: Use the LoggerMessage delegates
+dotnet_diagnostic.CA1848.severity = none
+
+# CA2201: Do not raise reserved exception types
+dotnet_diagnostic.CA2201.severity = none
+
+# CA1852: Seal internal types
+dotnet_diagnostic.CA1852.severity = none
